unpackaged/main/default/objects/ServiceAppointment/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <formula>Work_Order__r.Site_Post_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>