unpackaged/main/default/objects/ServiceAppointment/fields/Postcode_District__c.field-meta.xml
<CustomField>
    <fullName>Postcode_District__c</fullName>
    <formula>LEFT(Work_Order__r.Site_Post_Code__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode District</label>
    <type>Text</type>
</CustomField>