unpackaged/main/default/objects/ServiceAppointment/fields/Previous_Allocated_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Allocated_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Allocated Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointments (Previous Allocated Engineer)</relationshipLabel>
    <relationshipName>Service_Appts_Previously_Allocated</relationshipName>
    <type>Lookup</type>
</CustomField>