unpackaged/main/default/objects/ServiceAppointment/fields/Reactive_Count_reporting__c.field-meta.xml
<CustomField>
    <fullName>Reactive_Count_reporting__c</fullName>
    <description>For reporting purposes, will display a 1 if the &#39;Record Type Name&#39; field is &#39;Reactive&#39; or 0 if not.</description>
    <formula>IF( Record_Type_Name__c=&#39;Reactive&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes, will display a 1 if the &#39;Record Type Name&#39; field is &#39;Reactive&#39; or 0 if not.</inlineHelpText>
    <label>Reactive Count (reporting)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>