unpackaged/main/default/objects/ServiceAppointment/fields/Reason_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Review__c</fullName>
    <label>Reason for Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineer Communication</fullName>
            </value>
            <value>
                <fullName>Billing query</fullName>
            </value>
            <value>
                <fullName>Booking/expectations</fullName>
            </value>
            <value>
                <fullName>Documents not received</fullName>
            </value>
            <value>
                <fullName>Happy with our service</fullName>
            </value>
            <value>
                <fullName>Invalid Complaint</fullName>
            </value>
            <value>
                <fullName>Overcharge by engineer</fullName>
            </value>
            <value>
                <fullName>Poor engineer conduct</fullName>
            </value>
            <value>
                <fullName>Poor value for money</fullName>
            </value>
            <value>
                <fullName>Poor workmanship</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Trade administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>