unpackaged/main/default/objects/ServiceAppointment/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>The Record Type Name of the Work Order</description>
    <inlineHelpText>The Record Type Name of the Work Order</inlineHelpText>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>