unpackaged/main/default/objects/ServiceAppointment/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <label>Reschedule Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Aspect unable to meet required time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>