unpackaged/main/default/objects/ServiceAppointment/fields/Review_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Added_Date__c</fullName>
    <label>Review Added Date</label>
    <type>Date</type>
</CustomField>