unpackaged/main/default/objects/ServiceAppointment/fields/SA_Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>SA_Lead_Quality__c</fullName>
    <label>Tech Man Supervison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Attend</fullName>
            </value>
            <value>
                <fullName>Remote Supervise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>