unpackaged/main/default/objects/ServiceAppointment/fields/SA_Status__c.field-meta.xml
<CustomField>
    <fullName>SA_Status__c</fullName>
    <description>The Status of the Service Appointment</description>
    <formula>TEXT(Status)</formula>
    <inlineHelpText>The Status of the Service Appointment</inlineHelpText>
    <label>SA Status</label>
    <type>Text</type>
</CustomField>