unpackaged/main/default/objects/ServiceAppointment/fields/SA_Status_Cancelled_Customer_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>SA_Status_Cancelled_Customer_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA Status Cancelled Customer Email Sent</label>
    <type>Checkbox</type>
</CustomField>