unpackaged/main/default/objects/ServiceAppointment/fields/Sales_Approach__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approach__c</fullName>
    <label>Sales Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Appointment_Performance</valueSetName>
    </valueSet>
</CustomField>