unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Arrival_Window__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Window__c</fullName>
    <formula>Scheduled_Arrival_Window_Start__c + Scheduled_Arrival_Window_End__c</formula>
    <label>Scheduled Arrival Window</label>
    <type>Text</type>
</CustomField>