unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Start_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_TEXT__c</fullName>
    <description>Only for use on email templates as they do not show the Time portion of a date/time field within the email.</description>
    <formula>TEXT(DAY(DATEVALUE(SchedStartTime))) &amp; &quot;/&quot; &amp;

TEXT(MONTH(DATEVALUE(SchedStartTime))) &amp; &quot;/&quot; &amp;  

TEXT(YEAR(DATEVALUE(SchedStartTime))) &amp; &quot; &quot; &amp;

LEFT(TEXT(TIMEVALUE(IF(

    OR(

            EarliestStartTime  &lt; DATETIMEVALUE(DATE(YEAR(DATEVALUE(EarliestStartTime)),3,31)-(WEEKDAY(DATE(YEAR(DATEVALUE(EarliestStartTime)),3,31))-1) +1/24),

            EarliestStartTime &gt; DATETIMEVALUE(DATE(YEAR(DATEVALUE(EarliestStartTime)),10,31)- (WEEKDAY(DATE(YEAR(DATEVALUE(EarliestStartTime)),10,31))-1)+1/24)

    ),

    SchedStartTime,

    SchedStartTime + 1/24

))),5)</formula>
    <inlineHelpText>Only for use on email templates as they do not show the Time portion of a date/time field within the email.</inlineHelpText>
    <label>Scheduled Start TEXT</label>
    <type>Text</type>
</CustomField>