unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Trade__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Trade__c</fullName>
    <formula>TEXT(WorkType.Trade__c)</formula>
    <label>Scheduled Trade</label>
    <type>Text</type>
</CustomField>