unpackaged/main/default/objects/ServiceAppointment/fields/Scheduler_checked_booking__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_checked_booking__c</fullName>
    <label>Scheduler checked booking.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>