unpackaged/main/default/objects/ServiceAppointment/fields/Scope_of_Works_2__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Works_2__c</fullName>
    <label>Scope of Works 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>