unpackaged/main/default/objects/ServiceAppointment/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Fetches Sector Value From Account Object</description>
    <formula>TEXT( Account.Sector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>