unpackaged/main/default/objects/ServiceAppointment/fields/Service_Report_Required_Override__c.field-meta.xml
<CustomField>
    <fullName>Service_Report_Required_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used if there is a problem in the Mobile app in retrieving the Service Report - Office can tick this box, then Operative will need to pull down on the Work Order screen on mobile app to get the updated checkbox value.</description>
    <inlineHelpText>To be used if there is a problem in the Mobile app in retrieving the Service Report - Office can tick this box, then Operative will need to pull down on the Work Order screen on mobile app to get the updated checkbox value.</inlineHelpText>
    <label>Service Report Required Override</label>
    <type>Checkbox</type>
</CustomField>