unpackaged/main/default/objects/ServiceAppointment/fields/Service_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_ID__c</fullName>
    <label>Service Resource ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>