unpackaged/main/default/objects/ServiceAppointment/fields/Service_Resource_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_User_Id__c</fullName>
    <label>Service Resource User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>