unpackaged/main/default/objects/ServiceAppointment/fields/Service_Resources__c.field-meta.xml
<CustomField>
    <fullName>Service_Resources__c</fullName>
    <label>Service Resources</label>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>