unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Cancelled_Engineer_Notification__c.field-meta.xml
<CustomField>
    <fullName>SMS_Cancelled_Engineer_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked when the SMS text msg has been sent to the Operative to tell them the Service Appointment has been cancelled.</description>
    <inlineHelpText>To be ticked when the SMS text msg has been sent to the Operative to tell them the Service Appointment has been cancelled.</inlineHelpText>
    <label>SMS Cancelled Engineer Notification</label>
    <type>Checkbox</type>
</CustomField>