unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Engineer_Notification__c.field-meta.xml
<CustomField>
    <fullName>SMS_Engineer_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Engineer Notification</label>
    <type>Checkbox</type>
</CustomField>