unpackaged/main/default/objects/ServiceAppointment/fields/SMS_In_Transit_Customer_Notification__c.field-meta.xml
<CustomField>
    <fullName>SMS_In_Transit_Customer_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked when the SMS notification to the Service Appointment Contact has been sent.</description>
    <inlineHelpText>To be ticked when the SMS notification to the Service Appointment Contact has been sent.</inlineHelpText>
    <label>SMS In Transit Customer Notification</label>
    <type>Checkbox</type>
</CustomField>