unpackaged/main/default/objects/ServiceAppointment/fields/Star_Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Number__c</fullName>
    <formula>Case(Review_Star_Rating__c , &#39;1&#39;, 1, &#39;2&#39;, 2, &#39;3&#39;, 3, &#39;4&#39;,4,&#39;5&#39;,5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>