unpackaged/main/default/objects/ServiceAppointment/fields/Summarised_SA_Info_for_Canx_SA__c.field-meta.xml
<CustomField>
    <fullName>Summarised_SA_Info_for_Canx_SA__c</fullName>
    <formula>AppointmentNumber &amp; &quot; - &quot; &amp;  TEXT(Status) &amp; &quot; - &quot; &amp; &quot;Sched Start: &quot; &amp;  LEFT(TEXT(SchedStartTime),16) &amp; &quot; - &quot; &amp;  Scheduled_Trade__c</formula>
    <label>Summarised SA Info for Canx SA</label>
    <type>Text</type>
</CustomField>