unpackaged/main/default/objects/ServiceAppointment/fields/Supervision_type__c.field-meta.xml
<CustomField>
    <fullName>Supervision_type__c</fullName>
    <label>Supervision type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Remote Supervision</fullName>
            </value>
            <value>
                <fullName>Need to contact OP</fullName>
            </value>
            <value>
                <fullName>Checked Report, Post Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>