unpackaged/main/default/objects/ServiceAppointment/fields/Support_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_Form_URL__c</fullName>
    <formula>Work_Order__r.Support_Form_URL__c</formula>
    <label>Support Form URL</label>
    <type>Text</type>
</CustomField>