unpackaged/main/default/objects/ServiceAppointment/fields/Tech_Man_to_Attend__c.field-meta.xml
<CustomField>
    <fullName>Tech_Man_to_Attend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Man to Attend</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>