unpackaged/main/default/objects/ServiceAppointment/fields/Technical_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Technical_Knowledge__c</fullName>
    <label>Technical Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Appointment_Performance</valueSetName>
    </valueSet>
</CustomField>