unpackaged/main/default/objects/ServiceAppointment/fields/Trade_for_Further_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Trade_for_Further_Work_Required__c</fullName>
    <formula>Work_Order__r.Trade_for_Further_Work_Required__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade for Further Work Required</label>
    <type>Text</type>
</CustomField>