unpackaged/main/default/objects/ServiceAppointment/fields/Trade_Group__c.field-meta.xml
<CustomField>
    <fullName>Trade_Group__c</fullName>
    <formula>Work_Order__r.Trade_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Group</label>
    <type>Text</type>
</CustomField>