unpackaged/main/default/objects/ServiceAppointment/fields/Uniform__c.field-meta.xml
<CustomField>
    <fullName>Uniform__c</fullName>
    <label>Uniform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Appointment_Performance</valueSetName>
    </valueSet>
</CustomField>