unpackaged/main/default/objects/ServiceAppointment/fields/Use_Of_App_Forms__c.field-meta.xml
<CustomField>
    <fullName>Use_Of_App_Forms__c</fullName>
    <label>Use Of App &amp; Forms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Appointment_Performance</valueSetName>
    </valueSet>
</CustomField>