unpackaged/main/default/objects/ServiceAppointment/fields/User_Date_Time_Service_Report_Override__c.field-meta.xml
<CustomField>
    <fullName>User_Date_Time_Service_Report_Override__c</fullName>
    <label>User + Date Time Service Report Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>