unpackaged/main/default/objects/ServiceAppointment/fields/Verified_Review_Received__c.field-meta.xml
<CustomField>
    <fullName>Verified_Review_Received__c</fullName>
    <label>Verified Review Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>