unpackaged/main/default/objects/ServiceAppointment/fields/Workmanship__c.field-meta.xml
<CustomField>
    <fullName>Workmanship__c</fullName>
    <label>Workmanship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Appointment_Performance</valueSetName>
    </valueSet>
</CustomField>