unpackaged/main/default/objects/ServiceAppointment/validationRules/Cannot_Visit_Complete_to_in_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Visit_Complete_to_in_Progress</fullName>
    <active>false</active>
    <description>&quot;Android app.
The engineer should not change from Visit Complete to In Progress.&quot;</description>
    <errorConditionFormula>AND
(			ISPICKVAL(Status,&quot;Visit Complete&quot;) ,
PRIORVALUE(Status) = &quot;In Progress&quot;				
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You Cannot change this Service Appointment back to In Progress</errorMessage>
</ValidationRule>