unpackaged/main/default/objects/ServiceAppointment/validationRules/Client_not_present.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_not_present</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
NOT(
ISPICKVAL(Status, &#39;On site - Client not Present&#39; )),
 No_access_to_the_property__c = True
)</errorConditionFormula>
    <errorMessage>You can mark this field only if the status is  &#39;On site - Client not Present&#39;</errorMessage>
</ValidationRule>