unpackaged/main/default/objects/ServiceAppointment/validationRules/Other_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Cancellation_Reason</fullName>
    <active>true</active>
    <description>Other selected for Cancellation Reason. Please Enter a Reason</description>
    <errorConditionFormula>AND(
ISPICKVAL(Cancellation_Reason__c , &quot;Other&quot;),
ISBLANK( Other_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Please enter the Reason if Other was chosen for Cancellation Reason</errorMessage>
</ValidationRule>