unpackaged/main/default/objects/ServiceAppointment/validationRules/Other_Reschedule_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reschedule_Reason</fullName>
    <active>true</active>
    <description>Other selected for Reschedule Reason. Please Enter a Reason</description>
    <errorConditionFormula>AND(
ISPICKVAL(Reschedule_Reason__c , &quot;Other&quot;),
ISBLANK( Other_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Please enter the Reason if Other was chosen for Reschedule Reason</errorMessage>
</ValidationRule>