unpackaged/main/default/objects/ServiceAppointment/validationRules/SA_Reschedule.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_Reschedule</fullName>
    <active>false</active>
    <description>Required Fields on Cancelling a Service Appointment</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status, &quot;Rescheduled&quot;), 
OR( 
ISPICKVAL(Reschedule_Reason__c, &quot;&quot;),
ISBLANK( Reschedule_Time_Stamp__c ) 
))</errorConditionFormula>
    <errorMessage>Please fill in the Cancellation Reason and Enter a Time Stamp of Cancellation before changing the Status to Cancelled</errorMessage>
</ValidationRule>