unpackaged/main/default/objects/ServiceAppointment/listViews/All_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>All_Service_Appointments</fullName>
    <columns>CreatedDate</columns>
    <columns>Name</columns>
    <columns>CreatedBy</columns>
    <columns>Status</columns>
    <columns>Account_Type__c</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>Scheduled_Arrival_Window_Start__c</columns>
    <columns>Scheduled_Arrival_Window__c</columns>
    <columns>SchedStartTime</columns>
    <columns>Expected_Arrival_Time__c</columns>
    <columns>Scheduled_Trade__c</columns>
    <columns>Scheduled_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Appointments</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>